[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast_thumbhash"
version = "1.0.0"
description = "Fast ThumbHash bindings for Python using Rust (PyO3)"
authors = [{ name = "Sita Berete" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
pillow = ["Pillow"]

[tool.maturin]
python-source = "."

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux_*"
